fixed sizes on svg on mobile readingvue

--- a/client/src/Components/Pages/article/readingcomponents/readingview/removeScroll.css
+++ b/client/src/Components/Pages/article/readingcomponents/readingview/removeScroll.css
@@ -1,11 +1,8 @@
 
 @media screen and (max-width: 768px) {
-    body::-webkit-scrollbar {
+    ::-webkit-scrollbar {
         display: none;
         width: 0!important;
-    }
-    ::-webkit-scrollbar-track-piece{
-        -webkit-border-radius: 0px;
-        background-color: none;
+        
     }
 }
